[tool.poetry]
name = "transportation-distribution-charge"
version = "0.1.0"
description = ""
authors = ["Ruben Peeters <ruben@fampeeters.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
ipykernel = "*"
numpy = "^1.26.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
